# othellogame

./: .gitignore  CMakeLists.txt  README
othello/: CMakeLists.txt
othello/src/: .#CGameAI1VsAI1.h  AI1.cpp  AI1.h  CAI.cpp  CAI.h  CAI1.cpp  CAI1.h  CBoard.cpp  CBoard.h  CBoardGUI.cpp  CBoardGUI.h  CComputerPlayer.cpp  CComputerPlayer.h  CGameAI1VsAI1.cpp  CGameAI1VsAI1.h  CGameHumanVsAI1.cpp  CGameHumanVsAI1.h  CGameHumanVsHuman.cpp  CGameHumanVsHuman.h  CHumanPlayer.cpp  CHumanPlayer.h  CInputParser.cpp  CInputParser.h  COthelloInstance.cpp  COthelloInstance.h  CPlayer.cpp  CPlayer.h  OthelloUtil.cpp  OthelloUtil.h  Player.cpp  Player.h  cleanup.h  main.cpp  res_path.h
